--- a/YellowstonePathology/UI/Login/FinalizeAccession/AliquotAndStainOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/AliquotAndStainOrderPage.xaml
@@ -287,7 +287,7 @@
 					<CheckBox Grid.Column="0" Grid.Row="2" Margin="10,2,2,10" VerticalAlignment="Center" Checked="CheckBoxTests_Checked" Unchecked="CheckBoxTests_Unchecked" />
 					<TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,10,10" HorizontalAlignment="Stretch" Text="Tests" />
 
-                    <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal">
+                    <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock Margin="2,2,5,2" HorizontalAlignment="Right">
                             <Hyperlink Click="HyperLinkUpdateSlides_Click">Update Slides</Hyperlink>
                         </TextBlock>
