--- a/YellowstonePathology/UI/Billing/SimulationDialog.xaml
+++ b/YellowstonePathology/UI/Billing/SimulationDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="YellowstonePathology.UI.Billing.BillingSimulationDialog"
+﻿<Window x:Class="YellowstonePathology.UI.Billing.SimulationDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,9 +21,13 @@
 
             <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Post Date:" />
             <TextBox Name="TextBoxPostDate" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=PostDate, Converter={StaticResource ShortDateConverter}}"/>
-            <Button Grid.Column="2" Grid.Row="0" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonGetList_Click">Get List</Button>
 
-            <ListView Name="ListViewAutomationList" Margin="2,2,2,2" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{Binding Path=AutomationList}">
+            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="0">
+                <Button Width="25" Height="20" Margin="1,1,1,1" Click="ButtonBack_Click">&lt;</Button>
+                <Button Width="25" Height="20" Margin="1,1,1,1" Click="ButtonForward_Click">&gt;</Button>
+            </StackPanel>
+
+            <ListView Name="ListViewSimulationList" Margin="2,2,2,2" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{Binding Path=SimulationList}">
                 <ListView.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Map To Medicare" Click="MenuItemMapToMedicare_Click" Tag="{Binding}"></MenuItem>
@@ -42,13 +46,15 @@
                         <GridViewColumn DisplayMemberBinding="{Binding Path=MedicalRecord}" Header="MRN" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PrimaryInsuranceManual}" Header="Manual" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PrimaryInsuranceADT}" Header="ADT" Width="200"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=PrimaryInsuranceMapped}" Header="Mapped" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=PrimaryInsuranceSim}" Header="Sim" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PatientType}" Header="IP/OP" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=PatientTypeSim}" Header="SIM" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=PatientClass}" Header="Class" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=AssignedPatientLocation}" Header="Location" Width="100"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            
-            <Button Grid.Column="0" Grid.Row="2" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonRun_Click">Run</Button>
+                        
             <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonClose_Click">Close</Button>
 
         </Grid>
