--- a/YellowstonePathology/UI/Test/HoldForFlowResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HoldForFlowResultPage.xaml
@@ -81,7 +81,7 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Comment:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" Height="300"/>
 
                     <Grid Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
