--- a/YellowstonePathology/UI/DailyDOHDistributionDialog.xaml
+++ b/YellowstonePathology/UI/DailyDOHDistributionDialog.xaml
@@ -59,9 +59,8 @@
             </ListView.View>
         </ListView>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" HorizontalAlignment="Right">
-            <Button Width="120" Height="30" Margin="2,2,2,2" Click="ButtonClose_Click">Close</Button>
-        </StackPanel>
+        <Button Grid.Column="0" Grid.Row="3" Width="120" Height="30" Margin="2,2,2,2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Click="ButtonDistribute_Click">Distribute</Button>
+        <Button Grid.Column="1" Grid.Row="3" Width="120" Height="30" Margin="2,2,2,2" HorizontalAlignment="Right" Click="ButtonClose_Click">Close</Button>
 
     </Grid>
 </Window>
