--- a/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
@@ -148,8 +148,8 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <TextBox Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.CellsCountedUI}" />
-                        <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.CellsRecount}" Visibility="{Binding Path=RecountVisibility}" />
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.CellsCountedUI}" />
+                        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.CellsRecount}" Visibility="{Binding Path=RecountVisibility}" />
                     </Grid>
 
                     <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Total HER2 Signals Counted:</TextBlock>
@@ -163,8 +163,8 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <TextBox Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalHer2SignalsCountedUI}" />
-                        <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalHer2SignalsRecount}" Visibility="{Binding Path=RecountVisibility}" />
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalHer2SignalsCountedUI}" />
+                        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalHer2SignalsRecount}" Visibility="{Binding Path=RecountVisibility}" />
                     </Grid>
 
                     <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Total CHR17 Signals Counted:</TextBlock>
@@ -178,8 +178,8 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <TextBox Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalChr17SignalsCountedUI}" />
-                        <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalChr17SignalsRecount}" Visibility="{Binding Path=RecountVisibility}" />
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalChr17SignalsCountedUI}" />
+                        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=PanelSetOrder.TotalChr17SignalsRecount}" Visibility="{Binding Path=RecountVisibility}" />
                     </Grid>
 
                     <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" VerticalAlignment="Center" FontWeight="Bold">CHR17 Signal Range:</TextBlock>
@@ -226,7 +226,7 @@
                     <TextBlock Grid.Column="1" Grid.Row="16" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.AverageHer2Chr17Signal}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="17" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Score:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="17" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.IHCScore}" />
+                    <TextBlock Grid.Column="1" Grid.Row="17" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.IHCScore}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="21" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Result Comment:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="22" Margin="2" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.ResultComment}" />
