--- a/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -127,7 +127,7 @@
 
                         <TextBlock Grid.Column="0" Grid.Row="24" Margin="5,3,0,0" VerticalAlignment="Bottom">
                             <Hyperlink Click="HyperLinkAddComplete_Click">Complete</Hyperlink>
-                </TextBlock>
+                        </TextBlock>
                     </Grid>
                 </Expander>
 
@@ -209,7 +209,10 @@
 
                 <TextBlock Grid.Column="2" Grid.Row="4" Margin="10,2,2,5" TextAlignment="Right" Text="Final Date:" FontSize="14" FontWeight="Bold" />
                 <TextBlock Grid.Column="3" Grid.Row="4" Margin="2,2,2,5" TextAlignment="Left" Text="{Binding Path=PanelSetOrder.FinalTime}" FontSize="14" IsEnabled="False"/>
-                
+
+                <TextBlock Grid.Column="2" Grid.Row="6" Margin="2,2,2,2" TextAlignment="Right" Text="Hold Distribution:" FontSize="14" FontWeight="Bold" />
+                <CheckBox Grid.Column="3" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.HoldDistribution}" FontSize="14" />
+
                 <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold">Report Distribution:</TextBlock>                                
                 
                 <ListView Name="ListViewTestOrderReportDistribution" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="8" 
