Add StandingOrderView and collection wiht dlg to show them

--- a/YellowstonePathology/UI/Client/ProviderEntry.xaml
+++ b/YellowstonePathology/UI/Client/ProviderEntry.xaml
@@ -212,8 +212,9 @@
 			</TabItem>
 		</TabControl>
 
-		<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">			
-			<Button Margin="5" Width="100" Height="30" Content="OK" Click="ButtonOK_Click"></Button>			
+		<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            <Button Margin="5,5,100,5" Width="100" Height="30" Content="HPVRules" Click="ButtonShowHPVRules_Click" />
+            <Button Margin="5" Width="100" Height="30" Content="OK" Click="ButtonOK_Click"></Button>			
 		</StackPanel>
 	</Grid>
 </Window>
