--- a/YellowstonePathology/UI/Test/StemCellEnumerationResultPage.xaml
+++ b/YellowstonePathology/UI/Test/StemCellEnumerationResultPage.xaml
@@ -89,13 +89,13 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,5" FontWeight="Bold">Stem Cell Enumeration:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.StemCellEnumeration}" />
+                    <TextBox Name="textBoxStemCellEnumeration" Grid.Column="1" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.StemCellEnumeration}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Viability:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Viability}" />
+                    <TextBox Name="textBoxViability" Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Viability}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">WBC Count:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.WBCCount}" />
+                    <TextBox Name="textBoxWBCCount" Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.WBCCount}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,5" FontWeight="Bold">Method:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.Method}" />
