--- a/YellowstonePathology/UI/Client/ProviderEntry.xaml
+++ b/YellowstonePathology/UI/Client/ProviderEntry.xaml
@@ -72,14 +72,29 @@
 					<TextBox Grid.Column="1" Grid.Row="12" Text="{Binding Path=Physician.PublishNotificationEmailAddress}" Margin="2,2,2,2"></TextBox>
 
 					<TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV Standing Order:</TextBlock>
-					<ComboBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" ItemsSource="{Binding Path=HpvStandingOrders}" SelectedValue="{Binding Path=Physician.HPVStandingOrderCode}"
-							  SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
-					</ComboBox>
+                    <Grid Grid.Column="1" Grid.Row="13">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+					    <ComboBox Grid.Column="0" Margin="2,2,2,2" ItemsSource="{Binding Path=HpvStandingOrders}" SelectedValue="{Binding Path=Physician.HPVStandingOrderCode}"
+							      SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description" HorizontalAlignment="Stretch">
+					    </ComboBox>
+                        <Button Grid.Column="1" Margin="2,2,2,2" Width="100" Content="Rules" Click="ButtonShowHPVRules_Click" />
+                    </Grid>
 
-					<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV 16/18 Standing Order:</TextBlock>
-					<ComboBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" ItemsSource="{Binding Path=HPV1618StandingOrderCollection}" SelectedValue="{Binding Path=Physician.HPV1618StandingOrderCode}"
+                    <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV 16/18 Standing Order:</TextBlock>
+                    <Grid Grid.Column="1" Grid.Row="14">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <ComboBox Grid.Column="0" Margin="2,2,2,2" ItemsSource="{Binding Path=HPV1618StandingOrderCollection}" SelectedValue="{Binding Path=Physician.HPV1618StandingOrderCode}"
 							  SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
-					</ComboBox>
+                        </ComboBox>
+                        <Button Grid.Column="1" Margin="2,2,2,2" Width="100" Content="Rules" Click="ButtonShowHPV1618Rules_Click" />
+                    </Grid>
+
 
                     <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Home Base:</TextBlock>
                     <ComboBox Name="ComboBoxHomeBase" Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" ItemsSource="{Binding Path=ProviderClients}" SelectedValue="{Binding Path=Physician.HomeBaseClientId}"
@@ -213,7 +228,6 @@
 		</TabControl>
 
 		<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Button Margin="5,5,100,5" Width="100" Height="30" Content="HPVRules" Click="ButtonShowHPVRules_Click" />
             <Button Margin="5" Width="100" Height="30" Content="OK" Click="ButtonOK_Click"></Button>			
 		</StackPanel>
 	</Grid>
