--- a/YellowstonePathology/UI/Client/ProviderEntry.xaml
+++ b/YellowstonePathology/UI/Client/ProviderEntry.xaml
@@ -72,28 +72,14 @@
 					<TextBox Grid.Column="1" Grid.Row="12" Text="{Binding Path=Physician.PublishNotificationEmailAddress}" Margin="2,2,2,2"></TextBox>
 
 					<TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV Standing Order:</TextBlock>
-                    <Grid Grid.Column="1" Grid.Row="13">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-					    <ComboBox Grid.Column="0" Margin="2,2,2,2" ItemsSource="{Binding Path=HpvStandingOrders}" SelectedValue="{Binding Path=Physician.HPVStandingOrderCode}"
-							      SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description" HorizontalAlignment="Stretch">
-					    </ComboBox>
-                        <Button Grid.Column="1" Margin="2,2,2,2" Width="100" Content="Rules" Click="ButtonShowHPVRules_Click" />
-                    </Grid>
+                    <ComboBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" ItemsSource="{Binding Path=HpvStandingOrders}" SelectedValue="{Binding Path=Physician.HPVStandingOrderCode}"
+							    SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description" HorizontalAlignment="Stretch">
+					</ComboBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV 16/18 Standing Order:</TextBlock>
-                    <Grid Grid.Column="1" Grid.Row="14">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <ComboBox Grid.Column="0" Margin="2,2,2,2" ItemsSource="{Binding Path=HPV1618StandingOrderCollection}" SelectedValue="{Binding Path=Physician.HPV1618StandingOrderCode}"
-							  SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
-                        </ComboBox>
-                        <Button Grid.Column="1" Margin="2,2,2,2" Width="100" Content="Rules" Click="ButtonShowHPV1618Rules_Click" />
-                    </Grid>
+                    <ComboBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" ItemsSource="{Binding Path=HPV1618StandingOrderCollection}" SelectedValue="{Binding Path=Physician.HPV1618StandingOrderCode}"
+							SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
+                    </ComboBox>
 
 
                     <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Home Base:</TextBlock>
@@ -225,6 +211,66 @@
 				</Grid>
 
 			</TabItem>
+
+            <TabItem Header="HPV Standing Order">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <ListView Name="ListViewStandingOrders" Grid.Column="0" Margin="2,2,2,2"
+							 ItemsSource="{Binding Path=HPVStandingOrderCollection}" SelectionChanged="ListViewStandingOrders_SelectionChanged"  ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Rule" Width="290" DisplayMemberBinding="{Binding Path=HPVStandingOrderName}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+                    <Grid Grid.Column="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+
+
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Patient Age:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.Age}" />
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">PAP Result:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.PAPResult}" />
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">HPV Result:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.HPVResult}" />
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">HPV Testing:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.HPVTesting}" />
+
+                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Endocervical:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.Endocervical}" />
+
+                        <Button Grid.Column="1" Grid.Row="7" Margin="5,40,5,5" Width="100" Height="30" HorizontalAlignment="Right" Content="Add" Click="ButtonAddHPVStandingOrder_Click"></Button>
+
+                    </Grid>
+                </Grid>
+                
+            </TabItem>
 		</TabControl>
 
 		<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
