Add HPVStandingOrder tab to ProviderEntry dlg

--- a/YellowstonePathology/UI/Client/ProviderEntry.xaml
+++ b/YellowstonePathology/UI/Client/ProviderEntry.xaml
@@ -251,19 +251,16 @@
 
 
                         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Patient Age:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.Age}" />
+                        <ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=AgeList}" SelectedValue="{Binding Path=HPVStandingOrder.Age}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">PAP Result:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.PAPResult}" />
+                        <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=PAPResultList}" SelectedValue="{Binding Path=HPVStandingOrder.PAPResult}" />
 
-                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">HPV Result:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.HPVResult}" />
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">HPV Testing:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=HPVTestingList}" SelectedValue="{Binding Path=HPVStandingOrder.HPVTesting}" />
 
-                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">HPV Testing:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.HPVTesting}" />
-
-                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Endocervical:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=HPVStandingOrder.Endocervical}" />
+                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">Endocervical Transformation Zone:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" ItemsSource="{Binding Path=EndocervicalList}" SelectedValue="{Binding Path=HPVStandingOrder.Endocervical}" />
 
                         <Button Grid.Column="1" Grid.Row="7" Margin="5,40,5,5" Width="100" Height="30" HorizontalAlignment="Right" Content="Add" Click="ButtonAddHPVStandingOrder_Click"></Button>
 
