--- a/YellowstonePathology/UI/AmendmentControlV2.xaml
+++ b/YellowstonePathology/UI/AmendmentControlV2.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="YellowstonePathology.UI.AmendmentControlV2"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:TemplateSelectorUI="clr-namespace:YellowstonePathology.UI.TemplateSelector">
   <UserControl.Resources>    
 
 		<HierarchicalDataTemplate x:Key="DataTemplateAmendment">
@@ -16,17 +17,54 @@
 				<TextBlock Margin="2,2,2,2" VerticalAlignment="Center">Amendments for:</TextBlock>
 				<TextBlock Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=PanelSetName}"></TextBlock>
 			</StackPanel>
-		</HierarchicalDataTemplate>		
+		</HierarchicalDataTemplate>
 
-	</UserControl.Resources>
-    
-	<TreeView Name="TreeViewAmendment" ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}" ItemTemplate="{StaticResource DataTemplateAmendmentPanelSetOrder}">
-		<TreeView.ContextMenu>
-			<ContextMenu>                
-				<MenuItem Header="Edit" Click="ContextMenuEditAmendment_Click"></MenuItem>				
-				<MenuItem Header="Add" Click="ContextMenuAddAmendment_Click"></MenuItem>
-				<MenuItem Header="Delete" Click="ContextMenuDeleteAmendment_Click"></MenuItem>
-			</ContextMenu>
-		</TreeView.ContextMenu>
-	</TreeView>    
+    </UserControl.Resources>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Name="Row1" Height="*" />
+            <RowDefinition Name="Row2" Height="*" />
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        
+	    <TreeView Name="TreeViewAmendment" Grid.Row="0" ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}" ItemTemplate="{StaticResource DataTemplateAmendmentPanelSetOrder}"
+                  Visibility="{Binding Path=PanelSetOrderVisibility}">
+		    <TreeView.ContextMenu>
+			    <ContextMenu>                
+				    <MenuItem Header="Edit" Click="ContextMenuEditAmendment_Click"></MenuItem>				
+				    <MenuItem Header="Add" Click="ContextMenuAddAmendment_Click"></MenuItem>
+				    <MenuItem Header="Delete" Click="ContextMenuDeleteAmendment_Click"></MenuItem>
+			    </ContextMenu>
+		    </TreeView.ContextMenu>
+	    </TreeView>
+
+        <Border Grid.Row="1" BorderThickness="1" BorderBrush="Gray" Visibility="{Binding Path=GlobalVisibility}">
+
+            <Grid Grid.Row="1" Visibility="{Binding Path=GlobalVisibility}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5,5,5,5">
+                    <TextBlock Margin="2,2,2,2" VerticalAlignment="Center">Amendments for:</TextBlock>
+                    <TextBlock Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=AccessionOrder.MasterAccessionNo}"></TextBlock>
+                </StackPanel>
+            
+                <ListBox Name="ListBoxGlobal" Grid.Row="1" ItemsSource="{Binding Path=AccessionOrder.AmendmentCollection}" ItemTemplate="{StaticResource DataTemplateAmendment}" BorderThickness="0">
+                    <ListBox.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Edit" Click="ContextMenuEditGlobalAmendment_Click"></MenuItem>
+                            <MenuItem Header="Add" Click="ContextMenuAddGlobalAmendment_Click"></MenuItem>
+                            <MenuItem Header="Delete" Click="ContextMenuDeleteGlobalAmendment_Click"></MenuItem>
+                        </ContextMenu>
+                    </ListBox.ContextMenu>
+
+                </ListBox>
+            </Grid>
+        </Border>
+        
+        <Button Name="ButtonGlobal" Grid.Row="2" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" Height="30" Click="ButtonGlobal_Click">Global Amendments</Button>
+    </Grid>
 </UserControl>
